--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -42,14 +42,26 @@ jobs:
         TRIGGER_EVENT: ${{ github.event_name }}
       run: python action.py
 
-    - name: Setup Pages
+    - name: Commit and Push changes
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add .
+        git diff --staged --quiet || (git commit -m "Update weather report" && git push)
+
+    - name: Configure Pages
       uses: actions/configure-pages@v3
-      
-    - name: Upload artifact
+    
+    - name: Build Pages
+      run: |
+        mkdir _site
+        cp index.html _site/
+        
+    - name: Upload Pages artifact
       uses: actions/upload-pages-artifact@v2
       with:
-        path: '.'
-        
+        path: '_site'
+    
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
